add SparkBuild.sh