@@ -3437,18 +3437,17 @@
       <id>jdk-17</id>
       <properties>
         <extraJavaTestArgs>
-          --add-opens java.base/java.nio=ALL-UNNAMED
-          --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+          --add-opens java.base/java.lang=ALL-UNNAMED
           --add-opens java.base/java.lang.invoke=ALL-UNNAMED
+          --add-opens java.base/java.io=ALL-UNNAMED
+          --add-opens java.base/java.net=ALL-UNNAMED
+          --add-opens java.base/java.nio=ALL-UNNAMED
           --add-opens java.base/java.util=ALL-UNNAMED
+          --add-opens java.base/java.util.concurrent=ALL-UNNAMED
+          --add-opens java.base/sun.nio.ch=ALL-UNNAMED
+          --add-opens java.base/sun.nio.cs=ALL-UNNAMED
           --add-opens java.base/sun.security.action=ALL-UNNAMED
           --add-opens java.base/sun.util.calendar=ALL-UNNAMED
-          --add-opens java.base/java.lang=ALL-UNNAMED
-          --add-opens java.base/java.io=ALL-UNNAMED
-          --add-opens java.base/sun.nio.cs=ALL-UNNAMED
-          --add-opens java.base/java.net=ALL-UNNAMED
-          --add-opens java.base/java.util.concurrent=ALL-UNNAMED
-          --add-exports java.base/jdk.internal.util.random=ALL-UNNAMED
         </extraJavaTestArgs>
       </properties>
     </profile>
